# zephyr-input-hid

./: .gitignore  README.md
firmware/: CMakeLists.txt  Kconfig  flash-dongle.sh  prj.conf  west.yml
firmware/boards/: big_stick.conf  ble_pulse_encoder.conf  darfon.conf  ds2_retrofit.conf  kbd_matrix.conf  mimxrt1010_evk.conf  mimxrt1010_evk.overlay  negcon_retro.conf  nrf52840dongle.conf  nrf52840dongle.overlay  nrf52dk_nrf52832.conf  nrf52dk_nrf52832.overlay  paw_g3.conf  paw_pogo.conf  paw_testboard.conf  ploopy_mouse_nrf.conf  pmw_testboard.conf  wasd_kbd.conf  zalpakka.conf
firmware/boards/arm/kbd_matrix/: Kconfig.board  Kconfig.defconfig  board.cmake  kbd_matrix.dts  kbd_matrix_defconfig
firmware/boards/balto/big_stick/: CMakeLists.txt  Kconfig.big_stick  big_stick-pinctrl.dtsi  big_stick.dts  board.cmake  board.yml  hall-axes.c
firmware/boards/balto/ble_pulse_encoder/: CMakeLists.txt  Kconfig.ble_pulse_encoder  Kconfig.defconfig  ble_pulse_encoder-pinctrl.dtsi  ble_pulse_encoder.dts  ble_pulse_encoder_nrf52832_J.overlay  board.cmake  board.yml  flash_mcuboot  flash_ota.py  input_board_filter.c
firmware/boards/balto/darfon/: CMakeLists.txt  Kconfig.darfon  board.cmake  board.yml  clicker.c  darfon.dts  darfon_defconfig  leds.c
firmware/boards/balto/ds2_retrofit/: CMakeLists.txt  Kconfig  Kconfig.ds2_retrofit  board.yml  button_scan.c  ds2_retrofit-pinctrl.dtsi  ds2_retrofit.dts  flash_mcuboot  flash_ota.py
firmware/boards/balto/kbd_matrix/: Kconfig  Kconfig.kbd_matrix  board.cmake  board.yml  kbd_matrix-pinctrl.dtsi  kbd_matrix.dts  kbd_matrix_defconfig
firmware/boards/balto/negcon-retro/: CMakeLists.txt  Kconfig  Kconfig.negcon_retro  board.yml  flash_mcuboot  flash_ota.py  haptic.c  negcon_retro-pinctrl.dtsi  negcon_retro.dts  negcon_retro_defconfig
firmware/boards/balto/paw_g3/: CMakeLists.txt  Kconfig.defconfig  Kconfig.paw_g3  board.yml  flash_mcuboot  flash_ota.py  paw_g3-pinctrl.dtsi  paw_g3.dts  paw_g3_defconfig  paw_power.c
firmware/boards/balto/paw_pogo/: CMakeLists.txt  board.cmake  (+6 more)
firmware/dts/bindings/: ble-unpair.yaml  button-scan.yaml  charger-gpio.yaml  gyro.yaml  hid-common.yaml  hid-gamepad.yaml  hid-hog.yaml  hid-kbd.yaml  hid-mouse.yaml  hid.yaml  input-board-filter.yaml  pm-control.yaml  suspend-gpios.yaml  ti,drv8212.yaml  ti,drv8830.yaml  touch-sense.yaml  usb-hid.yaml  usb-wakeup.yaml  xinput.yaml
firmware/include/: event.h  hid_kbd.h  hid_mouse.h
firmware/include/dt-bindings/: hid.h
firmware/src/: analog-axis-shell.c  auto_poweroff.c  bas_adc.c  bas_fuel_gauge.c  bas_fuel_gauge_sensor.c  ble.c  ble.h  ble_hog.c  ble_hog.h  ble_hog_shell.c  ble_shell.c  ble_status.c  ble_unpair.c  blinker.c  blinker.h  charger.c  charger_gpio.c  drv8830.c  drv8830.h  event.c  event.h  event.ld  hid.c  hid.h  hid_gamepad.c  hid_kbd.c  hid_kbd.h  hid_mouse.c  hid_report_map.c  hid_report_map.h  main.c  panic.c  pm_control.c  reboot.c  usb_hid.c  usbd.c  watchdog.c  xinput.c
(+57 files in other folders)
